# jabuti

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: todo.md
jabuti/: __init__.py  __main__.py
jabuti/builtin/: __init__.py  bool.py  config.py  math.py  sample.py  tables.py
jabuti/core/: anchor.py  block.py  const.py  group.py  link.py  runsys.py
jabuti/gui/: tk_based.py  tkgui.py
jabuti/tests/: test_links.py
jabuti/utils/: finder.py  toml.py
tests/: test_flows.py  test_groups.py  test_links.py
tests/runsys/: rs1.json  rs1.toml
