# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                                                           #
#                                      @@@@@@@                                                              #
#               @@@@                  @::::::@                                     @@@@            @@@@     #
#              @::::@                 @::::::@                                   @@:::@           @::::@    #
#               @@@@                  @::::::@                                  @:::::@            @@@@     #
#                                      @:::::@                                  @:::::@                     #
#             @@@@@@@   @@@@@@@@@@@@   @:::::@@@@@@@@@    @@@@@     @@@@@@ @@@@@@:::::@@@@@@@    @@@@@@     #
#             @:::::@  @::::::::::::@  @::::::::::::::@@  @::::@    @::::@@:::::::::::::::::@    @:::::@    #
#              @::::@  @@@@@@@@@:::::@ @::::::::::::::::@ @::::@    @::::@@:::::::::::::::::@     @::::@    #
#              @::::@           @::::@ @:::::@@@@@:::::::@@::::@    @::::@@@@@@@:::::::@@@@@      @::::@    #
#              @::::@    @@@@@@@:::::@ @:::::@    @::::::@@::::@    @::::@      @:::::@           @::::@    #
#              @::::@  @@::::::::::::@ @:::::@     @:::::@@::::@    @::::@      @:::::@           @::::@    #
#              @::::@ @::::@@@@::::::@ @:::::@     @:::::@@::::@    @::::@      @:::::@           @::::@    #
#              @::::@@::::@    @:::::@ @:::::@     @:::::@@:::::@@@@:::::@      @:::::@    @@@@@@ @::::@    #
#              @::::@@::::@    @:::::@ @:::::@@@@@@::::::@@:::::::::::::::@@    @::::::@@@@:::::@@::::::@   #
#              @::::@@:::::@@@@::::::@ @::::::::::::::::@  @:::::::::::::::@    @@::::::::::::::@@::::::@   #
#              @::::@ @::::::::::@@:::@@:::::::::::::::@    @@::::::::@@:::@      @@:::::::::::@@@::::::@   #
#              @::::@  @@@@@@@@@@  @@@@ @@@@@@@@@@@@@@@       @@@@@@@@  @@@@        @@@@@@@@@@@  @@@@@@@@   #
#              @::::@                                                                                       #
#    @@@@      @::::@                                                                                       #
#   @::::@@   @:::::@                                                                                       #
#   @::::::@@@::::::@                                                                                       #
#    @@::::::::::::@                                                                                        #
#      @@@::::::@@@                                                                                         #
#         @@@@@@                                                                                            #
#                                                                                                           #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jabuti"
version = "0.1.5"
authors = [
    {name="Arthur L. Bohn", email="tuybohn@gmail.com"},
]
description = "A Python powered, tkinter based, functional blocks editor and executer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ ]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/ArthurBohn95/jabuti"
"Tracker" = "https://github.com/ArthurBohn95/jabuti/issues"
